--- a/index.html
+++ b/index.html
@@ -106,12 +106,12 @@
 
     <!-- Confidence Section -->
     <section>
-        <div class="relative h-[70vh] mt-12 rounded-xl overflow-hidden max-w-screen-xl mx-auto">
+        <div class="relative h-[70vh] rounded-xl overflow-hidden max-w-screen-xl mx-auto">
             <div
                 class="relative bg-[url('images/second-image.jpg')] bg-cover bg-center h-full py-32 px-4 flex items-center justify-center">
                 <div class="absolute inset-0 bg-black/50"></div>
                 <div class="relative z-10 text-center">
-                    <h2 class="font-bebas text-7xl mb-8">CONFIDENCE</h2>
+                    <h2 class="font-bebas text-[12rem] mb-8">CONFIDENCE</h2>
                     <a href="#start"
                         class="inline-block bg-brand-orange hover:bg-orange-500 text-white font-bold py-4 px-12 rounded-full text-2xl transition duration-300">
                         Start Today
@@ -122,17 +122,70 @@
     </section>
 
     <!-- Footer -->
-    <footer class="footer py-12 text-center" id="footer">
-        <h3 class="font-bebas text-4xl mb-4">Sign Up For Exclusive Updates and Offers</h3>
-        <form class="footer-form">
-            <input type="email" placeholder="Enter your email" required
-                class="bg-gray-200 py-4 pl-10 text-sm text-gray-700">
-            <button type="submit"
-                class="bg-brand-orange hover:bg-orange-500 text-white font-bold py-4 px-10 rounded-full text-lg uppercase transition duration-300">
-                Subscribe
-            </button>
-        </form>
-        <p class="text-gray-300 text-sm mt-4">&copy; 2025 Transform75. All rights reserved.</p>
+    <footer class="bg-black text-sm">
+        <div class="py-24 px-4 mt-16 grid md:grid-cols-2 gap-12 xl:col-span-2 xl:mt-0  max-w-screen-xl mx-auto">
+            <div class="">
+                <div class="h-4">
+                    <img src="images/logo.svg" alt="Transform75" class="h-full">
+                </div>
+
+                <!-- <h3 class="text-3xl font-semibold leading-6 text-gray-900 font-bebas uppercase">Subscribe</h3>
+                <p class="mt-3 text-base leading-6 text-gray-600 uppercase">join our ember for exclusive Offers and
+                    updates
+                </p>
+                <form class="sm:flex sm:max-w-md mt-12">
+                    <label for="email-address" class="sr-only"> Email address</label>
+                    <input type="email" name="email" id="email-address" autocomplete="email" required=""
+                        class="w-full min-w-0 border appearance-none rounded-md border-gray-300 bg-white px-2  text-base leading-7 text-gray-900 placeholder-gray-400 shadow-sm focus:border-indigo-600 focus:ring-indigo-600 sm:w-64 sm:text-sm sm:leading-6 xl:w-full"
+                        placeholder="E-Mail Address">
+                    <div class="mt-4 rounded-md sm:mt-0 sm:ml-4 sm:flex-shrink-0">
+                        <div class="flex justify-end">
+                            <button
+                                class="inline-flex items-center justify-center px-4 py-2.5 border border-transparent text-sm font-medium rounded-md shadow-sm focus:outline-none ring-2 ring-offset-2 ring-transparent ring-offset-transparent disabled:bg-gray-400 appearance-none text-white bg-indigo-600 hover:bg-indigo-700 focus:ring-indigo-500 focus:ring-offset-white w-full"
+                                type="submit">
+                                <div class="relative">
+                                    <div class="">Subscribe</div>
+                                </div>
+                            </button>
+                        </div>
+                    </div>
+                </form> -->
+            </div>
+            <div class="md:grid md:grid-cols-2 md:gap-8">
+                <div class="mt-10 md:mt-0">
+                    <h3 class="text-md font-semibold leading-6 text-gray-400">Links</h3>
+                    <ul role="list" class="mt-6 space-y-4 text-gray-400">
+                        <li>
+                            <a class="hover:text-gray-100"
+                                href="https://funforest.notion.site/Terms-and-Conditions-128832063e388029a46acf0ecde74506">Terms
+                                and
+                                Conditions
+                            </a>
+                        </li>
+                        <li>
+                            <a class="hover:text-gray-100"
+                                href="https://funforest.notion.site/Privacy-Policy-128832063e3880a687c7da534227d56d">Privacy
+                                Policy
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+                <div class="mt-10 md:mt-0">
+                    <h3 class="font-semibold text-gray-400 text-md">Contacts us</h3>
+                    <ul role="list" class="mt-6 space-y-4 text-gray-400">
+                        <li>
+                            <a class="hover:text-gray-100" href="mailto:info@transform75">connect@transform75.com
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+
+        </div>
+        <div class="flex justify-between text-gray-400 max-w-screen-xl mx-auto text-xs font-medium pb-4 px-4">
+            <p>© 2025 Transform75. All Rights Reserved</p>
+            <a href="#">Back to Top</a>
+        </div>
     </footer>
 </body>
 
