--- a/index.html
+++ b/index.html
@@ -4,7 +4,39 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Transform75</title>
+    <title>Transform75 - 75-Day Life Transformation Challenge</title>
+
+    <!-- SEO Meta Tags -->
+    <meta name="description"
+        content="Transform your life in 75 days with Transform75. Join our challenge to build unbreakable willpower and achieve lasting changes in fitness, career, and relationships.">
+    <meta name="keywords"
+        content="Transform75, life transformation, 75 day challenge, willpower, fitness, personal development, lifestyle change">
+    <meta name="author" content="Transform75">
+
+    <!-- Open Graph Meta Tags for Social Media -->
+    <meta property="og:title" content="Transform75 - 75-Day Life Transformation Challenge">
+    <meta property="og:description"
+        content="Transform your life in 75 days. Build unbreakable willpower and achieve lasting changes in fitness, career, and relationships.">
+    <meta property="og:image" content="https://transform75.com/images/og-image.jpg">
+    <meta property="og:url" content="https://transform75.com">
+    <meta property="og:type" content="website">
+
+    <!-- Twitter Card Meta Tags -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="Transform75 - 75-Day Life Transformation Challenge">
+    <meta name="twitter:description"
+        content="Transform your life in 75 days. Build unbreakable willpower and achieve lasting changes.">
+    <meta name="twitter:image" content="https://transform75.com/images/og-image.jpg">
+
+    <!-- Favicon and Apple Touch Icon -->
+    <link rel="icon" type="image/svg+xml" href="images/favicon.svg">
+    <link rel="apple-touch-icon" sizes="57x57" href="images/apple-touch-icon-57x57.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="images/apple-touch-icon-180x180.png">
+
+    <!-- Canonical URL -->
+    <link rel="canonical" href="https://transform75.com">
+
+    <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
@@ -34,6 +66,7 @@
             }
         }
     </script>
+    <script src="index.js"></script>
 </head>
 
 <body class="bg-black text-white">
@@ -44,7 +77,7 @@
         <div class="h-4">
             <img src="images/logo.svg" alt="Transform75" class="h-full">
         </div>
-        <a href="#start"
+        <a href="#start" onclick="redirectToStore(); return false;"
             class="bg-brand-orange hover:bg-orange-500 text-white font-manrope py-2 px-6 rounded-full transition duration-300 text-lg font-extrabold">Join
             Now</a>
     </nav>
@@ -52,30 +85,32 @@
     <!-- Hero Section -->
     <header class="min-h-screen flex items-center justify-center px-4 pt-16 pb-6">
         <div class="mx-auto text-center">
-            <div class="max-w-7xl">
-                <h1 class="font-bebas text-xl md:text-7xl lg:text-8xl xl:text-9xl leading-tight mb-4">
-                    UNLEASH YOUR UNBREAKABLE<br>
-                    WILLPOWER IN <span class="text-brand-orange">75 DAYS</span>
-                </h1>
-                <p class="text-gray-300 text-xl mx-auto mb-12 font-manrope opacity-50">
-                    Embark on a life-changing journey that will redefine your limits and transform every aspect of your
-                    life.
-                </p>
-            </div>
-            <div class="relative h-[70vh] mt-12 rounded-xl overflow-hidden">
-                <div
-                    class="relative bg-[url('images/hero-bg.jpg')] bg-cover bg-center h-full py-32 px-4 flex items-center justify-center">
-                    <div class="absolute inset-0 bg-black/50"></div>
-                    <div class="relative z-10">
-                        <h2 class="font-bebas text-7xl mb-8">READY TO TRANSFORM?</h2>
-                        <a href="#start"
-                            class="inline-block bg-brand-orange hover:bg-orange-500 text-white font-bold py-4 px-12 rounded-full text-2xl transition duration-300">
-                            Start Today
-                        </a>
+            <div class="mx-auto text-center">
+                <div class="max-w-7xl">
+                    <h1 class="font-bebas text-xl md:text-7xl lg:text-8xl xl:text-9xl leading-tight mb-4">
+                        UNLEASH YOUR UNBREAKABLE<br>
+                        WILLPOWER IN <span class="text-brand-orange">75 DAYS</span>
+                    </h1>
+                    <p class="text-gray-300 text-xl mx-auto mb-12 font-manrope opacity-50">
+                        Embark on a life-changing journey that will redefine your limits and transform every aspect of
+                        your
+                        life.
+                    </p>
+                </div>
+                <div class="relative h-[70vh] mt-12 rounded-xl overflow-hidden">
+                    <div
+                        class="relative bg-[url('images/hero-bg.jpg')] bg-cover bg-center h-full py-32 px-4 flex items-center justify-center">
+                        <div class="absolute inset-0 bg-black/50"></div>
+                        <div class="relative z-10">
+                            <h2 class="font-bebas text-7xl mb-8">READY TO TRANSFORM?</h2>
+                            <a href="#start" onclick="redirectToStore(); return false;"
+                                class="inline-block bg-brand-orange hover:bg-orange-500 text-white font-bold py-4 px-12 rounded-full text-2xl transition duration-300">
+                                Start Today
+                            </a>
+                        </div>
                     </div>
                 </div>
             </div>
-        </div>
     </header>
 
     <!-- Marquee / "Feeling Stuck" Section -->
@@ -112,7 +147,7 @@
                 <div class="absolute inset-0 bg-black/50"></div>
                 <div class="relative z-10 text-center">
                     <h2 class="font-bebas text-[12rem] mb-8">CONFIDENCE</h2>
-                    <a href="#start"
+                    <a href="#start" onclick="redirectToStore(); return false;"
                         class="inline-block bg-brand-orange hover:bg-orange-500 text-white font-bold py-4 px-12 rounded-full text-2xl transition duration-300">
                         Start Today
                     </a>
@@ -183,7 +218,7 @@
 
         </div>
         <div class="flex justify-between text-gray-400 max-w-screen-xl mx-auto text-xs font-medium pb-4 px-4">
-            <p>© 2025 Transform75. All Rights Reserved</p>
+            <p> 2025 Transform75. All Rights Reserved</p>
             <a href="#">Back to Top</a>
         </div>
     </footer>
