--- a/index.html
+++ b/index.html
@@ -78,23 +78,22 @@
             <img src="images/logo.svg" alt="Transform75" class="h-full">
         </div>
         <a href="#start" onclick="redirectToStore(); return false;"
-            class="bg-brand-orange hover:bg-orange-500 text-white font-manrope py-2 px-6 rounded-full transition duration-300 text-lg font-extrabold">Join
+            class="bg-brand-orange hover:bg-orange-500 text-white font-manrope py-1 md:py-2 px-4 md:px-6 rounded-full transition duration-300 text-md md:text-lg font-bold md:font-extrabold">Join
             Now</a>
     </nav>
 
     <!-- Hero Section -->
     <header class="min-h-screen flex items-center justify-center px-4 pt-16 pb-6">
-        <div class="mx-auto text-center">
-            <div class="mx-auto text-center">
+        <div class="mx-auto md:text-center">
+            <div class="mx-auto md:text-center">
                 <div class="max-w-7xl">
-                    <h1 class="font-bebas text-xl md:text-7xl lg:text-8xl xl:text-9xl leading-tight mb-4">
+                    <h1 class="font-bebas text-6xl md:text-7xl lg:text-8xl xl:text-9xl leading-tight mb-4">
                         UNLEASH YOUR UNBREAKABLE<br>
-                        WILLPOWER IN <span class="text-brand-orange">75 DAYS</span>
+                        WILLPOWER IN <p class="text-brand-orange inline-block">75 DAYS</p>
                     </h1>
-                    <p class="text-gray-300 text-xl mx-auto mb-12 font-manrope opacity-50">
+                    <p class="text-gray-300 text-lg md:text-xl mx-auto mb-12 font-manrope opacity-50">
                         Embark on a life-changing journey that will redefine your limits and transform every aspect of
-                        your
-                        life.
+                        your life.
                     </p>
                 </div>
                 <div class="relative h-[70vh] mt-12 rounded-xl overflow-hidden">
@@ -104,7 +103,7 @@
                         <div class="relative z-10">
                             <h2 class="font-bebas text-7xl mb-8">READY TO TRANSFORM?</h2>
                             <a href="#start" onclick="redirectToStore(); return false;"
-                                class="inline-block bg-brand-orange hover:bg-orange-500 text-white font-bold py-4 px-12 rounded-full text-2xl transition duration-300">
+                                class="inline-block bg-brand-orange hover:bg-orange-500 text-white font-bold py-3 md:py-4 px-8 md:px-12 rounded-full text-2xl transition duration-300">
                                 Start Today
                             </a>
                         </div>
@@ -114,7 +113,7 @@
     </header>
 
     <!-- Marquee / "Feeling Stuck" Section -->
-    <section class="py-12 bg-[#F1FF98] text-black overflow-hidden">
+    <section class="py-8 md:py-12 bg-[#F1FF98] text-black overflow-hidden">
         <div class="relative flex whitespace-nowrap animate-marquee">
             <div class="flex items-center mx-4 text-2xl font-bold">
                 FEELING STUCK <img src="images/sparkle.svg" alt="sparkle" class="inline-block w-8 h-8 mx-4" /> FEELING
@@ -131,8 +130,8 @@
     </section>
 
     <!-- Info Section -->
-    <section class="info py-24 text-center bg-white" id="start">
-        <p class="text-gray-800 text-7xl font-bebas max-w-screen-xl mx-auto">
+    <section class="info px-4 py-14 md:py-24 md:text-center bg-white" id="start">
+        <p class="text-gray-800 text-5xl md:text-7xl font-bebas max-w-screen-xl mx-auto">
             Career, fitness, and relationships not where you envisioned? It's time to break through barriers and reach
             your full potential with
             <span class="text-brand-orange">TRANSFORM75</span>.
@@ -146,9 +145,9 @@
                 class="relative bg-[url('images/second-image.jpg')] bg-cover bg-center h-full py-32 px-4 flex items-center justify-center">
                 <div class="absolute inset-0 bg-black/50"></div>
                 <div class="relative z-10 text-center">
-                    <h2 class="font-bebas text-[12rem] mb-8">CONFIDENCE</h2>
+                    <h2 class="font-bebas text-8xl md:text-[12rem] mb-8">CONFIDENCE</h2>
                     <a href="#start" onclick="redirectToStore(); return false;"
-                        class="inline-block bg-brand-orange hover:bg-orange-500 text-white font-bold py-4 px-12 rounded-full text-2xl transition duration-300">
+                        class="inline-block bg-brand-orange hover:bg-orange-500 text-white font-bold py-3 md:py-4 px-8 md:px-12 rounded-full text-2xl transition duration-300">
                         Start Today
                     </a>
                 </div>
@@ -188,7 +187,7 @@
             </div>
             <div class="md:grid md:grid-cols-2 md:gap-8">
                 <div class="mt-10 md:mt-0">
-                    <h3 class="text-md font-semibold leading-6 text-gray-400">Links</h3>
+                    <h3 class="text-md font-semibold leading-6 text-gray-200">Links</h3>
                     <ul role="list" class="mt-6 space-y-4 text-gray-400">
                         <li>
                             <a class="hover:text-gray-100"
@@ -206,7 +205,7 @@
                     </ul>
                 </div>
                 <div class="mt-10 md:mt-0">
-                    <h3 class="font-semibold text-gray-400 text-md">Contacts us</h3>
+                    <h3 class="font-semibold text-gray-200 text-md">Contacts us</h3>
                     <ul role="list" class="mt-6 space-y-4 text-gray-400">
                         <li>
                             <a class="hover:text-gray-100" href="mailto:info@transform75">connect@transform75.com
