--- a/index.html
+++ b/index.html
@@ -43,6 +43,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@200..800&display=swap" rel="stylesheet">
     <script src="https://cdn.tailwindcss.com"></script>
     <script>
+
+        // Tailwind config
         tailwind.config = {
             theme: {
                 extend: {
@@ -61,11 +63,16 @@
                         marquee2: {
                             '0%': { transform: 'translateX(100%)' },
                             '100%': { transform: 'translateX(0%)' }
+                        },
+                        fadeIn: {
+                            '0%': { opacity: '0', transform: 'translateY(10px)' },
+                            '100%': { opacity: '1', transform: 'translateY(0)' }
                         }
                     },
                     animation: {
                         'marquee': 'marquee 25s linear infinite',
-                        'marquee2': 'marquee2 25s linear infinite'
+                        'marquee2': 'marquee2 25s linear infinite',
+                        'fade-in': 'fadeIn 0.5s ease-out'
                     }
                 }
             }
