add meta tags in get_app route

--- a/get_app/index.html
+++ b/get_app/index.html
@@ -4,7 +4,30 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Get Transform75 App</title>
+    <title>Get Transform75 App - Start Your 75-Day Challenge</title>
+
+    <!-- SEO Meta Tags -->
+    <meta name="description"
+        content="Download Transform75 app and start your 75-day life transformation challenge. Available on iOS and Android. Build unbreakable willpower today.">
+    <meta name="keywords"
+        content="Transform75 app, life transformation app, 75 day challenge app, willpower, fitness app, personal development app">
+    <meta name="author" content="Transform75">
+
+    <!-- Open Graph Meta Tags for Social Media -->
+    <meta property="og:title" content="Get Transform75 App - Start Your 75-Day Challenge">
+    <meta property="og:description"
+        content="Download Transform75 app and start your 75-day life transformation challenge. Build unbreakable willpower today.">
+    <meta property="og:image" content="https://transform75.com/images/og-image.jpg">
+    <meta property="og:url" content="https://transform75.com/get_app">
+    <meta property="og:type" content="website">
+
+    <!-- Twitter Card Meta Tags -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="Get Transform75 App - Start Your 75-Day Challenge">
+    <meta name="twitter:description"
+        content="Download Transform75 app and start your 75-day life transformation challenge. Build unbreakable willpower today.">
+    <meta name="twitter:image" content="https://transform75.com/images/og-image.jpg">
+
     <style>
         body {
             background: black;
