--- a/index.html
+++ b/index.html
@@ -123,22 +123,23 @@
                 <h1 class="font-bebas text-4xl sm:text-6xl md:text-7xl lg:text-8xl xl:text-9xl leading-tight mb-4">
                     UNLEASH YOUR UNBREAKABLE<br>
                     WILLPOWER IN
-                    <span class="text-brand-orange inline-flex overflow-hidden">
-                        <span class="inline-flex flex-col animate-scroll-number1 h-[1em]">
-                            <span>0</span>
-                            <span>2</span>
-                            <span>4</span>
-                            <span>5</span>
-                            <span>6</span>
-                            <span>7</span>
-                        </span><span class="inline-flex flex-col animate-scroll-number2 h-[1em]">
-                            <span>0</span>
-                            <span>2</span>
-                            <span>3</span>
-                            <span>4</span>
-                            <span>5</span>
+                    <span class="text-brand-orange inline-flex overflow-hidden items-center">
+                        <span class="inline-flex flex-col h-[1em] animate-scroll-number1 relative">
+                            <span class="h-[1em] flex items-center justify-center">0</span>
+                            <span class="h-[1em] flex items-center justify-center">2</span>
+                            <span class="h-[1em] flex items-center justify-center">4</span>
+                            <span class="h-[1em] flex items-center justify-center">5</span>
+                            <span class="h-[1em] flex items-center justify-center">6</span>
+                            <span class="h-[1em] flex items-center justify-center">7</span>
+                        </span><span class="inline-flex flex-col h-[1em] animate-scroll-number2 relative">
+                            <span class="h-[1em] flex items-center justify-center">0</span>
+                            <span class="h-[1em] flex items-center justify-center">2</span>
+                            <span class="h-[1em] flex items-center justify-center">3</span>
+                            <span class="h-[1em] flex items-center justify-center">4</span>
+                            <span class="h-[1em] flex items-center justify-center">5</span>
                         </span>
-                        <span class="animate-fade-in" style="animation-delay: 2s"> DAYS</span>
+                        <span class="animate-fade-in inline-flex items-center h-[1em]" style="animation-delay: 2s">
+                            &nbsp;DAYS</span>
                     </span>
                 </h1>
                 <p
@@ -167,24 +168,32 @@
     </header>
 
     <!-- Marquee / "Feeling Stuck" Section -->
-    <section class="py-8 md:py-12 bg-[#F1FF98] text-black overflow-hidden">
+    <section class="py-6 md:py-12 bg-[#F1FF98] text-black overflow-hidden">
         <div class="relative flex overflow-x-hidden">
             <!-- First scroll container -->
             <div class="animate-marquee whitespace-nowrap flex items-center">
-                <span class="mx-4 text-2xl font-bold flex items-center">
-                    TIME TO TRANSFORM <img src="images/sparkle.svg" alt="sparkle" class="inline-block w-8 h-8 mx-4" />
-                    BREAK YOUR LIMITS <img src="images/sparkle.svg" alt="sparkle" class="inline-block w-8 h-8 mx-4" />
-                    UNLEASH YOUR POWER <img src="images/sparkle.svg" alt="sparkle" class="inline-block w-8 h-8 mx-4" />
-                    BE UNSTOPPABLE <img src="images/sparkle.svg" alt="sparkle" class="inline-block w-8 h-8 mx-4" />
+                <span class="mx-2 md:mx-4 text-lg md:text-2xl font-bold flex items-center">
+                    TIME TO TRANSFORM <img src="images/sparkle.svg" alt="sparkle"
+                        class="inline-block w-6 h-6 md:w-8 md:h-8 mx-2 md:mx-4" />
+                    BREAK YOUR LIMITS <img src="images/sparkle.svg" alt="sparkle"
+                        class="inline-block w-6 h-6 md:w-8 md:h-8 mx-2 md:mx-4" />
+                    UNLEASH YOUR POWER <img src="images/sparkle.svg" alt="sparkle"
+                        class="inline-block w-6 h-6 md:w-8 md:h-8 mx-2 md:mx-4" />
+                    BE UNSTOPPABLE <img src="images/sparkle.svg" alt="sparkle"
+                        class="inline-block w-6 h-6 md:w-8 md:h-8 mx-2 md:mx-4" />
                 </span>
             </div>
             <!-- Second scroll container (duplicate for seamless loop) -->
             <div class="animate-marquee2 whitespace-nowrap flex items-center absolute top-0">
-                <span class="mx-4 text-2xl font-bold flex items-center">
-                    TIME TO TRANSFORM <img src="images/sparkle.svg" alt="sparkle" class="inline-block w-8 h-8 mx-4" />
-                    BREAK YOUR LIMITS <img src="images/sparkle.svg" alt="sparkle" class="inline-block w-8 h-8 mx-4" />
-                    UNLEASH YOUR POWER <img src="images/sparkle.svg" alt="sparkle" class="inline-block w-8 h-8 mx-4" />
-                    BE UNSTOPPABLE <img src="images/sparkle.svg" alt="sparkle" class="inline-block w-8 h-8 mx-4" />
+                <span class="mx-2 md:mx-4 text-lg md:text-2xl font-bold flex items-center">
+                    TIME TO TRANSFORM <img src="images/sparkle.svg" alt="sparkle"
+                        class="inline-block w-6 h-6 md:w-8 md:h-8 mx-2 md:mx-4" />
+                    BREAK YOUR LIMITS <img src="images/sparkle.svg" alt="sparkle"
+                        class="inline-block w-6 h-6 md:w-8 md:h-8 mx-2 md:mx-4" />
+                    UNLEASH YOUR POWER <img src="images/sparkle.svg" alt="sparkle"
+                        class="inline-block w-6 h-6 md:w-8 md:h-8 mx-2 md:mx-4" />
+                    BE UNSTOPPABLE <img src="images/sparkle.svg" alt="sparkle"
+                        class="inline-block w-6 h-6 md:w-8 md:h-8 mx-2 md:mx-4" />
                 </span>
             </div>
         </div>
